[gd_scene load_steps=6 format=3 uid="uid://yteoqqp3ok74"]

[ext_resource type="Script" path="res://Scripts/Game/base_level.gd" id="1_vnu8o"]
[ext_resource type="PackedScene" uid="uid://b5adnylpguwhk" path="res://Prefabs/Utils/animated_background.tscn" id="3_wp08y"]
[ext_resource type="PackedScene" uid="uid://ewykc6nn7r1b" path="res://Prefabs/Characters/Player/player.tscn" id="4_g23et"]
[ext_resource type="PackedScene" uid="uid://cd7bx6wwi4e5r" path="res://Prefabs/Utils/UI/hud.tscn" id="5_ken3n"]
[ext_resource type="PackedScene" uid="uid://bhihmdxgqpbxe" path="res://Scenes/Menus/pause_menu.tscn" id="6_sk0gx"]

[node name="BaseLevel" type="Node2D"]
script = ExtResource("1_vnu8o")

[node name="AnimatedBackground" parent="." instance=ExtResource("3_wp08y")]

[node name="Player" parent="." instance=ExtResource("4_g23et")]
position = Vector2(592, 576)
rotation = 4.71239

[node name="EnemySpawnTimer" type="Timer" parent="."]
autostart = true

[node name="HUD" parent="." instance=ExtResource("5_ken3n")]

[node name="PauseMenu" parent="." instance=ExtResource("6_sk0gx")]
visible = false

[node name="CongratulationsLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 321.0
offset_top = 248.0
offset_right = 835.0
offset_bottom = 266.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Meus parabéns, Você superou à horda de inimigos"
horizontal_alignment = 1
vertical_alignment = 1
